# HMRSsim

./: .gitignore  dotenv.sample  load.py  presentation.txt  pyproject.toml
examples/btSimulation/: hospital_scenario.drawio  run.py
examples/btSimulation/samples/: create_event.txt  navigate_pos.txt  query_component.txt
examples/hospitalSimulation/: .xml  run.py
examples/hospitalSimulationRos/: run.py
examples/navigationSimulation/: poi_test.drawio  run.py  simulation.json
examples/navigationSimulationRos/: run.py
examples/nurse-bt/bt/: nurse.cpp
examples/swarmSimulation/: run.py  traces.csv
src/simulator/: main.py
src/simulator/components/: Inventory.py  Path.py  Position.py  Skeleton.py
src/simulator/systems/: ApproximationDESProcessor.py  BridgePlugin.py  ClawDESProcessor.py  CollisionProcessor.py  GotoDESProcessor.py  ManageObjects.py  MovementProcessor.py  Observer.py  PathProcessor.py  Seer.py  SeerPlugin.py  Tester.py  Watcher.py
src/simulator/typehints/: component_types.py
src/simulator/utils/: Firebase.py  Navigation.py
tests/: test_hmrssim.py  test_utils.py
tests/bdd/: __init__.py
tests/bdd/features/: approximation.feature  camera.feature  collision.feature  robot_displacement.feature  scripted_commands.feature  simple_scripted_command.feature  single_static_robot.feature
tests/bdd/helpers/: AssertionHelper.py  ScenarioCreationHelper.py
tests/bdd/step_defs/: test_approximation.py  test_camera.py  test_seer.py  (+5 more)
tests/data/: seer_report.txt
tests/integration/: test_hospital_simulation_integration.py
tests/unit/: test_tester.py
(+5 files in other folders)
